# mondolib

./: .cruft.json  .gitignore  .template.db  CONTRIBUTING.md  LICENSE  Makefile  README.md  genindex.html  index.html  modules.html  mondolib.config.html  mondolib.datamodels.html  mondolib.html  mondolib.qc.html  mondolib.utilities.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.github/workflows/: deploy-docs.yml  qc.yml
_sources/: index.rst.txt  modules.rst.txt  mondolib.config.rst.txt  mondolib.datamodels.rst.txt  mondolib.qc.rst.txt  mondolib.rst.txt  mondolib.utilities.rst.txt
docs/: conf.py
src/mondolib/: __init__.py  cli.py  constants.py  main.py
src/mondolib/config/: __init__.py  qc_config.yaml
src/mondolib/datamodels/: __init__.py  mondolib_schema.py  mondolib_schema.yaml  vocabulary.py
src/mondolib/qc/: __init__.py  term_validator.py
src/mondolib/utilities/: __init__.py  curie_utilities.py
tests/: __init__.py
tests/input/: example.db  example.obo  example.owl
tests/test_qc/: __init__.py  test_term_validator.py
tmp/: mondo_validate.tsv  mondo_validate_full.tsv
